--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
               </div>
             </ul>
           </div>
-          <!-- <script src="/assets/scripts/getstarted.min.js" type="text/javascript"></script> -->
+          <!-- <script src="/assets/js/getstarted.min.js" type="text/javascript"></script> -->
 
         </div>
     </div>
@@ -69,8 +69,8 @@
 <script src="/vendor/jquery/dist/jquery.min.js" type="text/javascript"></script>
 <script src="/vendor/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
 <script src="/vendor/angular/angular.min.js" type="text/javascript"></script>
-<script src="/assets/scripts/getstarted.min.js" type="text/javascript"></script>
-<!-- <script src="/assets/scripts/document.min.js" type="text/javascript"></script> -->
-<script src="/assets/scripts/devices.min.js" type="text/javascript"></script>
+<script src="/assets/js/getstarted.min.js" type="text/javascript"></script>
+<!-- <script src="/assets/js/document.min.js" type="text/javascript"></script> -->
+<script src="/assets/js/devices.min.js" type="text/javascript"></script>
 </body>
 </html>
